Entrega de proyecto

--- a/contactanos.html
+++ b/contactanos.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Envíanos un mensaje si quieres contactarte con nosotros y nuestros agentes te responderán a la brevedad posible">
     <meta name="keywords" content="dejanos un mensaje, contact us">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!-- CSS only -->
@@ -28,48 +28,49 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="encabezado">
-            <div class="container">
-                CONTÁCTANOS: 2604352000 - INFO@DAYSOFPLAY.COM
+    <header>
+        <div class="sticky-top">
+            <div class="header">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <div class="container">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="images/logo.png" alt="logo">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-item nav-link" href="index.html">Inicio <span
+                                        class="sr-only">(current)</span></a>
+                                <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
+                                <a class="nav-item nav-link" href="mediosdepago.html">Medios de pago</a>
+                                <a class="nav-item nav-link" href="preguntasfrecuentes.html">Preguntas
+                                    frecuentes</a>
+                                <a class="nav-item nav-link active" href="contactanos.html">Contáctanos</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" alt="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
-                        <a class="nav-item nav-link" href="mediosdepago.html">Medios de pago</a>
-                        <a class="nav-item nav-link" href="preguntasfrecuentes.html">Preguntas frecuentes</a>
-                        <a class="nav-item nav-link active" href="contactanos.html">Contáctanos</a>
-
-                    </div>
-                </div>
-            </div>
-
-        </nav>
-    </div>
+    </header>
     <div class="container">
-        <div class="backg">
+        <div class="backgContactUs">
             <div class="container">
 
                 <!--Section: Contact v.2-->
                 <section class="mb-4">
 
                     <!--Section heading-->
-                    <h2 class="h1-responsive font-weight-bold text-center my-4">Contactános</h2>
+                    <div class="titleBox">
+                        <h1 class="h4"> Contáctanos</h1>
+                    </div>
                     <!--Section description-->
                     <p class="text-center w-responsive mx-auto mb-5">Tienes alguna duda? Envíanos tu consulta y un
-                        asesor se
-                        pondrá en contacto con vos.</p>
+                        asesor se pondrá en contacto con vos.</p>
 
                     <div class="row">
 
@@ -163,32 +164,56 @@
             </div>
         </div>
     </div>
-
-
-
-    <footer class="foot">
-        <!--pie-->
-        <div class="susc">
-            <div class="footText">
-                <p>Suscribite a nuestro sitio para novedades</p>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="aboutus">
+                        <h2 class="h5">Nosotros</h2>
+                        <p>Tienda de juegos digitales para PS3 y PS4 con excelente servicio al cliente.</p>
+                        <p>Nos destacamos por nuestros precios bajos y la gran variedad de productos disponibles, somos
+                            líderes en venta a pocos meses de lanzarnos.</p>
+                        <p>Estamos en Facebook, Instagram o puedes escribirnos a nuestro email.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="susc">
+                        <div class="footText">
+                            <h2 class="h5">Suscribite a nuestro sitio para novedades</h2>
+                        </div>
+                        <div class="inputs">
+                            <input class="inputMail" type="email" name="nombre@email.com" />
+                            <input class="submitText" type="submit" value="Enviar">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="inputs">
-                <input class="inputMail" type="email" name="nombre@email.com" />
-                <input class="submitText" type="submit" value="Enviar">
+        </div>
+        <div class="container">
+            <div class="cards">
+                <div class="footText">
+                    <p>Tarjetas que aceptamos</p>
+                </div>
+                <div class="creditCards">
+                    <p class="namecard1">VISA</p>
+                    <p class="namecard2">MASTER CARD</p>
+                    <p class="namecard3">AMERICAN EXPRESS</p>
+                </div>
+            </div>
+        </div>
+        <div class="socialm">
+            <div class="container">
+                <div class="row">
+                    <a class="itemsm" href="https://www.instagram.com" target="_blank"><img class="img_itemsm"
+                            src="images/insta2.png" alt="logo">Instagram</a>
+                    <a class="itemsm" href="https://www.Facebook.com" target="_blank"><img class="img_itemsm"
+                            src="images/face.png" alt="logo">Facebook</a>
+                    <a class="itemsm" href="https://www.Twitter.com" target="_blank"><img class="img_itemsm"
+                            src="images/twit.png" alt="logo">Twitter</a>
+                </div>
             </div>
 
         </div>
-        <div class="cards">
-            <div class="footText">
-                <p>Tarjetas que aceptamos</p>
-            </div>
-            <div class="creditCards">
-                <p class="namecard1">VISA</p>
-                <p class="namecard2">MASTER CARD</p>
-                <p class="namecard3">AMERICAN EXPRESS</p>
-            </div>
-        </div>
-
     </footer>
 </body>
 
