--- a/preguntasfrecuentes.html
+++ b/preguntasfrecuentes.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Todo lo que necesitas saber si tienes alguna duda antes o después de realizar tu compra">
     <meta name="keywords" content="que es un juego de ps4 digital, faqs, como instalar juegos digitales de ps4">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -27,58 +27,60 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="encabezado">
-            <div class="container">
-                CONTÁCTANOS: 2604352000 - INFO@DAYSOFPLAY.COM
+    <header>
+        <div class="sticky-top">
+            <div class="header">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <div class="container">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="images/logo.png" alt="logo">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-item nav-link" href="index.html">Inicio <span
+                                        class="sr-only">(current)</span></a>
+                                <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
+                                <a class="nav-item nav-link" href="mediosdepago.html">Medios de pago</a>
+                                <a class="nav-item nav-link active" href="preguntasfrecuentes.html">Preguntas
+                                    frecuentes</a>
+                                <a class="nav-item nav-link" href="contactanos.html">Contáctanos</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" alt="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
-                        <a class="nav-item nav-link" href="mediosdepago.html">Medios de pago</a>
-                        <a class="nav-item nav-link active" href="preguntasfrecuentes.html">Preguntas frecuentes</a>
-                        <a class="nav-item nav-link" href="contactanos.html">Contáctanos</a>
-
-                    </div>
-                </div>
-            </div>
-
-        </nav>
-    </div>
+    </header>
     <div class="container">
-        <div class="pregcont">
-            <h2 class="h4">Preguntas Frecuentes</h2>
-            <h3 class="h5">¿Qué tiene de distinto un juego digital a un juego físico?</h3>
+        <div class="faqContainer">
+            <div class="titleBox">
+                <h1 class="h4"> Preguntas Frecuentes</h1>
+            </div>
+            <h2 class="h5">¿Qué tiene de distinto un juego digital a un juego físico?</h2>
             <p>
                 Los juegos digitales son iguales que la versión física, salvo que no vienen en CD, sino que se almacenan
                 en la
                 memoria de tu consola hasta que vos decidas desinstalarlo.
             </p>
-            <h3 class="h5">¿Es mejor la versión en físico o en digital?</h3>
+            <h2 class="h5">¿Es mejor la versión en físico o en digital?</h2>
             <p>
                 Los juegos digitales son más prácticos que la versión física ya que estos no se rayan y duran para
                 siempre, a
                 parte son mucho más económicos.
             </p>
-            <h3 class="h5">¿Cómo recibo el juego?</h3>
+            <h2 class="h5">¿Cómo recibo el juego?</h2>
             <p>
                 Te envíamos los datos de la cuenta que tiene las licencias del juego, junto con el instructivo para
                 descargarlo
                 vía
                 WhatsApp una vez hayas efectuado el pago.
             </p>
-            <h3 class="h5">¿Qué diferencia hay entre cuenta primaria y secundaria?</h3>
+            <h2 class="h5">¿Qué diferencia hay entre cuenta primaria y secundaria?</h2>
             <p>
                 Los juegos digitales tienen 2 modalidades: cuenta primaria y cuenta secundaria.
                 En cuenta primaria podés jugar desde cualquier usuario PERSONAL y una vez descargado el juego no
@@ -89,7 +91,7 @@
                 Internet para poder jugar.
                 En ambos casos es el mismo juego, completo y original, sólo cambia eso.
             </p>
-            <h3 class="h5">¿Por cuánto tiempo tengo el juego?</h3>
+            <h2 class="h5">¿Por cuánto tiempo tengo el juego?</h2>
             <p>
                 Una vez acreditado el pago, te enviamos los datos de una cuenta que tiene las licencias del juego, junto
                 con el
@@ -100,31 +102,56 @@
             </p>
         </div>
     </div>
-
-
-    <footer class="foot">
-        <!--pie-->
-        <div class="susc">
-            <div class="footText">
-                <p>Suscribite a nuestro sitio para novedades</p>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="aboutus">
+                        <h2 class="h5">Nosotros</h2>
+                        <p>Tienda de juegos digitales para PS3 y PS4 con excelente servicio al cliente.</p>
+                        <p>Nos destacamos por nuestros precios bajos y la gran variedad de productos disponibles, somos
+                            líderes en venta a pocos meses de lanzarnos.</p>
+                        <p>Estamos en Facebook, Instagram o puedes escribirnos a nuestro email.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="susc">
+                        <div class="footText">
+                            <h2 class="h5">Suscribite a nuestro sitio para novedades</h2>
+                        </div>
+                        <div class="inputs">
+                            <input class="inputMail" type="email" name="nombre@email.com" />
+                            <input class="submitText" type="submit" value="Enviar">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="inputs">
-                <input class="inputMail" type="email" name="nombre@email.com" />
-                <input class="submitText" type="submit" value="Enviar">
+        </div>
+        <div class="container">
+            <div class="cards">
+                <div class="footText">
+                    <p>Tarjetas que aceptamos</p>
+                </div>
+                <div class="creditCards">
+                    <p class="namecard1">VISA</p>
+                    <p class="namecard2">MASTER CARD</p>
+                    <p class="namecard3">AMERICAN EXPRESS</p>
+                </div>
+            </div>
+        </div>
+        <div class="socialm">
+            <div class="container">
+                <div class="row">
+                    <a class="itemsm" href="https://www.instagram.com" target="_blank"><img class="img_itemsm"
+                            src="images/insta2.png" alt="logo">Instagram</a>
+                    <a class="itemsm" href="https://www.Facebook.com" target="_blank"><img class="img_itemsm"
+                            src="images/face.png" alt="logo">Facebook</a>
+                    <a class="itemsm" href="https://www.Twitter.com" target="_blank"><img class="img_itemsm"
+                            src="images/twit.png" alt="logo">Twitter</a>
+                </div>
             </div>
 
         </div>
-        <div class="cards">
-            <div class="footText">
-                <p>Tarjetas que aceptamos</p>
-            </div>
-            <div class="creditCards">
-                <p class="namecard1">VISA</p>
-                <p class="namecard2">MASTER CARD</p>
-                <p class="namecard3">AMERICAN EXPRESS</p>
-            </div>
-        </div>
-
     </footer>
 </body>
 
