--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio | Days of play | Juegos PS4 digitales</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <meta name="description"
         content="Encuentra los mejores títulos del mundo de los videojuegos digitales de PS4 a un precio accesible y con soporte las 24 hs los 365 días del año y además tu compra está asegurada">
     <meta name="keywords"
         content="juegos playstation digitales, playstation 4 video games, playstation plus free games">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -28,87 +28,130 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="encabezado">
-            <div class="container">
-                CONTÁCTANOS: 2604352000 - INFO@DAYSOFPLAY.COM
-            </div>
-        </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" alt="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="index.html">Inicio <span
-                                class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
-                        <a class="nav-item nav-link" href="mediosdepago.html">Medios de pago</a>
-                        <a class="nav-item nav-link" href="preguntasfrecuentes.html">Preguntas frecuentes</a>
-                        <a class="nav-item nav-link" href="contactanos.html">Contáctanos</a>
+    <div class="sticky-top">
+        <div class="header">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container">
+                    <div class="logo">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="images/logo.png" alt="logo">
+                        </a>
                     </div>
-                </div>
-            </div>
 
-        </nav>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link active" href="index.html">Inicio <span
+                                    class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
+                            <a class="nav-item nav-link" href="mediosdepago.html">Medios de pago</a>
+                            <a class="nav-item nav-link" href="preguntasfrecuentes.html">Preguntas frecuentes</a>
+                            <a class="nav-item nav-link" href="contactanos.html">Contáctanos</a>
+                        </div>
+                    </div>
+                </div>
+
+            </nav>
+        </div>
     </div>
+
     <!--presentacion-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100 imgTransform" src="images/1.png" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="h4">Bienvenidos a Days of Play</h1>
+                    <h1 class="h6">Tienda de Juegos de PS4 digitales</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 imgTransform" src="images/2.png" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>FIFA 21</h5>
+                    <p>Uno de los titulos mas esperado en este 2020</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 imgTransform" src="images/3.png" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!--accesos directos-->
     <div class="container">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/1.png" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Bienvenidos a Days of Play</h5>
-                        <p>Tienda de Juegos de PS4 digitales</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/2.png" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Dragon Ball Kakarot</h5>
-                        <p>Uno de los titulos mas esperado en este 2020</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/3.png" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>The Last Of Us 2</h5>
-                        <p>La segunda entrega de este exito viene con una nueva atrapante historia</p>
+        <div class="containerDirectsAccesBox">
+            <div class="containerAccessItem">
+                <div class="containerImg">
+                    <img class="accImg" src="images/1coll.png">
+                    <div class="containerText1">
+                        <h2 class="h4">Próximos <br>estrenos</h2>
+                        <p class="accesMiniText">Dentro de 30 días</p>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="containerAccessItem">
+                <div class="containerImg">
+                    <img class="accImg" src="images/2coll.png">
+                    <div class="containerText2">
+                        <h2 class="h4">Nuevos Juegos</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="containerAccessItem">
+                <div class="containerImg">
+                    <img class="accImg" src="images/3coll.png">
+                    <div class="containerText3">
+                        <h2 class="h4">Suscripción <br>Play S +</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="containerAccessItem">
+                <div class="containerImg">
+                    <img class="accImg" src="images/4coll.png">
+                    <div class="containerText4">
+                        <h2 class="h4">Nuevos Addons</h2>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
     <!--Lanzamientos-->
     <div class="container">
-        <div class="row">
-            <h3 class="h5">LANZAMIENTOS</h3>
-        </div>
-        <div class="row">
-            <div class="releaseImage"><img src="images/codmw.png" alt="release"></div>
-            <div class="releaseImage"><img src="images/codzombie.png" alt="release"></div>
-            <div class="releaseImage"><img src="images/crash.png" alt="release"></div>
-            <div class="releaseImage"><img src="images/farcryprimal.png" alt="release"></div>
-            <div class="releaseImage"><img src="images/gta5.png" alt="release"></div>
+        <div class="box-lanz">
+            <div class="row">
+                <h3 class="h5">LANZAMIENTOS</h3>
+            </div>
+            <div class="row no-gutters">
+                <div class="releaseImageBox">
+                    <div class="releaseImage"><img class="imgTransform" src="images/codmw.png" alt="release"></div>
+                    <div class="releaseImage"><img class="imgTransform" src="images/codzombie.png" alt="release"></div>
+                    <div class="releaseImage"><img class="imgTransform" src="images/crash.png" alt="release"></div>
+                    <div class="releaseImage"><img class="imgTransform" src="images/farcryprimal.png" alt="release">
+                    </div>
+                    <div class="releaseImage"><img class="imgTransform" src="images/gta5.png" alt="release"></div>
+                </div>
+            </div>
+
         </div>
     </div>
     <!--ofertas-->
@@ -116,7 +159,7 @@
         <div class="sale">
             <div class="row">
                 <div class="saleText">
-                    <h3 class="h5black">¡NUEVAS OFERTAS!</h3>
+                    <h3 class="h5">¡NUEVAS OFERTAS!</h3>
                 </div>
             </div>
 
@@ -125,7 +168,7 @@
                     <div class="product1">
                         <!--the last of us-->
                         <div class="imageBox">
-                            <img src="images/thelast.jpg" alt="thelastofus">
+                            <img src="images/thelast.png" alt="thelastofus">
                         </div>
                         <div class="textBox">
                             <div class="nameGame">
@@ -139,11 +182,11 @@
                     <div class="product1">
                         <!--hitman2-->
                         <div class="imageBox">
-                            <img src="images/hitman2.png" alt="thelastofus">
+                            <img src="images/hitman2.png" alt="hitman2">
                         </div>
                         <div class="textBox">
                             <div class="nameGame">
-                                <p>THE LAST OF US</p>
+                                <p>HITMAN 2</p>
                             </div>
                             <div class="priceGame">
                                 <p>2500$</p>
@@ -153,11 +196,11 @@
                     <div class="product1">
                         <!--injustice-->
                         <div class="imageBox">
-                            <img src="images/injustice.png" alt="thelastofus">
+                            <img src="images/injustice.png" alt="injustice">
                         </div>
                         <div class="textBox">
                             <div class="nameGame">
-                                <p>THE LAST OF US</p>
+                                <p>INJUSTICE 2</p>
                             </div>
                             <div class="priceGame">
                                 <p>2500$</p>
@@ -173,7 +216,7 @@
         <div class="indexStore">
             <div class="row">
                 <div class="saleText">
-                    <h3 class="h5black">NUESTRA TIENDA</h3>
+                    <h3 class="h5">NUESTRA TIENDA</h3>
                 </div>
             </div>
             <div class="productSale">
@@ -181,7 +224,7 @@
                     <div class="product1">
                         <!--the last of us-->
                         <div class="imageBox">
-                            <img src="images/thelast.jpg" alt="thelastofus">
+                            <img src="images/thelast.png" alt="thelastofus">
                         </div>
                         <div class="textBox">
                             <div class="nameGame">
@@ -195,11 +238,11 @@
                     <div class="product1">
                         <!--hitman2-->
                         <div class="imageBox">
-                            <img src="images/hitman2.png" alt="thelastofus">
+                            <img src="images/hitman2.png" alt="hitman2">
                         </div>
                         <div class="textBox">
                             <div class="nameGame">
-                                <p>THE LAST OF US</p>
+                                <p>HITMAN 2</p>
                             </div>
                             <div class="priceGame">
                                 <p>2500$</p>
@@ -209,11 +252,11 @@
                     <div class="product1">
                         <!--injustice-->
                         <div class="imageBox">
-                            <img src="images/injustice.png" alt="thelastofus">
+                            <img src="images/injustice.png" alt="injustice">
                         </div>
                         <div class="textBox">
                             <div class="nameGame">
-                                <p>THE LAST OF US</p>
+                                <p>INJUSTICE 2</p>
                             </div>
                             <div class="priceGame">
                                 <p>2500$</p>
@@ -226,27 +269,58 @@
         </div>
     </div>
 
-    <footer class="foot">
-        <!--pie-->
-        <div class="susc">
-            <div class="footText">
-                <p>Suscribite a nuestro sitio para novedades</p>
+
+    <!--pie-->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="aboutus">
+                        <h2 class="h5">Nosotros</h2>
+                        <p>Tienda de juegos digitales para PS3 y PS4 con excelente servicio al cliente.</p>
+                        <p>Nos destacamos por nuestros precios bajos y la gran variedad de productos disponibles, somos
+                            líderes en venta a pocos meses de lanzarnos.</p>
+                        <p>Estamos en Facebook, Instagram o puedes escribirnos a nuestro email.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="susc">
+                        <div class="footText">
+                            <h2 class="h5">Suscribite a nuestro sitio para novedades</h2>
+                        </div>
+                        <div class="inputs">
+                            <input class="inputMail" type="email" name="nombre@email.com" />
+                            <input class="submitText" type="submit" value="Enviar">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="inputs">
-                <input class="inputMail" type="email" name="nombre@email.com" />
-                <input class="submitText" type="submit" value="Enviar">
+        </div>
+        <div class="container">
+            <div class="cards">
+                <div class="footText">
+                    <p>Tarjetas que aceptamos</p>
+                </div>
+                <div class="creditCards">
+                    <p class="namecard1">VISA</p>
+                    <p class="namecard2">MASTER CARD</p>
+                    <p class="namecard3">AMERICAN EXPRESS</p>
+                </div>
+            </div>
+        </div>
+        <div class="socialm">
+            <div class="container">
+                <div class="row">
+                    <a class="itemsm" href="https://www.instagram.com" target="_blank"><img class="img_itemsm"
+                            src="images/insta2.png" alt="logo">Instagram</a>
+                    <a class="itemsm" href="https://www.Facebook.com" target="_blank"><img class="img_itemsm"
+                            src="images/face.png" alt="logo">Facebook</a>
+                    <a class="itemsm" href="https://www.Twitter.com" target="_blank"><img class="img_itemsm"
+                            src="images/twit.png" alt="logo">Twitter</a>
+
+                </div>
             </div>
 
-        </div>
-        <div class="cards">
-            <div class="footText">
-                <p>Tarjetas que aceptamos</p>
-            </div>
-            <div class="creditCards">
-                <p class="namecard1">VISA</p>
-                <p class="namecard2">MASTER CARD</p>
-                <p class="namecard3">AMERICAN EXPRESS</p>
-            </div>
         </div>
     </footer>
 </body>
