--- a/index.html
+++ b/index.html
@@ -5,26 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio | Days of play | Juegos PS4 digitales</title>
-    <link rel="stylesheet" href="style/style.css">
+
     <meta name="description"
         content="Encuentra los mejores títulos del mundo de los videojuegos digitales de PS4 a un precio accesible y con soporte las 24 hs los 365 días del año y además tu compra está asegurada">
     <meta name="keywords"
         content="juegos playstation digitales, playstation 4 video games, playstation plus free games">
-    
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-    </script>
 </head>
 
 <body>
@@ -60,6 +48,7 @@
     </div>
 
     <!--presentacion-->
+
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -67,21 +56,21 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-interval="2000">
                 <img class="d-block w-100 imgTransform" src="images/1.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="h4">Bienvenidos a Days of Play</h1>
                     <h1 class="h6">Tienda de Juegos de PS4 digitales</h1>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-interval="2000">
                 <img class="d-block w-100 imgTransform" src="images/2.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>FIFA 21</h5>
                     <p>Uno de los titulos mas esperado en este 2020</p>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-interval="2000">
                 <img class="d-block w-100 imgTransform" src="images/3.png" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
@@ -96,6 +85,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
     <!--accesos directos-->
     <div class="container">
         <div class="containerDirectsAccesBox">
@@ -323,6 +313,10 @@
 
         </div>
     </footer>
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/popper.min.js"></script>
 </body>
 
 </html>
