--- a/juegosdeps4.html
+++ b/juegosdeps4.html
@@ -8,22 +8,8 @@
     <meta name="description" content="Nuestra tienda contiene los títulos más recientes y vendidos al mejor precio">
     <meta name="keywords"
         content="juegos playstation digitales, tienda de videojuegos de playstation 4, juegos nuevos de playstation 4, game store">
-    <link rel="stylesheet" href="style/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-    </script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -234,24 +220,6 @@
         </div>
     </div>
 
-
-
-
-
-
-    <!--
-            <div class="col-lg-3">
-                <div class="d-none d-lg-block">
-                    <div class="release">
-                        <div class="mos">
-                            <div class="releaseImage"><img src="images/codmw.png" alt="#"></div>
-                            <div class="releaseImage"><img src="images/codzombie.png" alt="#"></div>
-                            <div class="releaseImage"><img src="images/crash.png" alt="#"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
--->
     <footer>
         <div class="container">
             <div class="row">
@@ -304,7 +272,10 @@
 
         </div>
     </footer>
-
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/popper.min.js"></script>
 </body>
 
 </html>
